Ported the whole thing to Hibernate 5.2.12 and made it compile with JDK 9. Deprecated some features.